@@ -2,13 +2,20 @@
 	// Make sure that we are executed only in TYPO3 context
 if (!defined ("TYPO3_MODE")) 	die ("Access denied.");
 
+	//form evaluation functions
 $TYPO3_CONF_VARS['SC_OPTIONS']['tce']['formevals']['tx_t3secsaltedpw_salted'] = 'EXT:' .  $_EXTKEY . '/res/eval/class.tx_t3secsaltedpw_salted.php';
-#$TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/felogin/pi1/class.tx_felogin_pi1.php'] = t3lib_extMgm::extPath($_EXTKEY, 'res/ux/class.ux_tx_felogin_pi1.php');
+
+	// install module
 $TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/install/mod/class.tx_install.php'] = t3lib_extMgm::extPath($_EXTKEY, 'res/ux/class.ux_tx_install.php');
 
-if ($GLOBALS['TYPO3_LOADED_EXT']['feuser_admin']) {
-	$TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['media/scripts/fe_adminLib.inc'] = t3lib_extMgm::extPath($_EXTKEY, 'res/ux/ux_fe_adminLib.inc');
+	// sysext:felogin
+if ((t3lib_div::int_from_ver(TYPO3_version) >= 4002000)
+		&& (t3lib_div::int_from_ver(TYPO3_version) < 4002004)) {
+	$TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['ext/felogin/pi1/class.tx_felogin_pi1.php'] = t3lib_extMgm::extPath($_EXTKEY, 'res/ux/class.ux_tx_felogin_pi1.php');
 }
+
+	// ext:feuser_admin
+$TYPO3_CONF_VARS[TYPO3_MODE]['XCLASS']['media/scripts/fe_adminLib.inc'] = t3lib_extMgm::extPath($_EXTKEY, 'res/ux/ux_fe_adminLib.inc');
 
 t3lib_extMgm::addService(
 	't3sec_saltedpw',
